--- a/carousel/index.html
+++ b/carousel/index.html
@@ -50,7 +50,7 @@
      				</div>
 				</div>
 				<div class="carousel-item">
-					<img src="file:///Library/Desktop%20Pictures/Blue%20Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
+					<img src="https://github.com/innovatrixlvis/images/blob/1a48bd18ddbe90c71cb5700ed2ebc18ff7c791e8/Blue%20Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
 					<div class="carousel-caption" id= "pic3">
        					<h2></h2>
      				</div>
