--- a/carousel/index.html
+++ b/carousel/index.html
@@ -38,19 +38,19 @@
   
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="file:///Library/Desktop%20Pictures/Bristle%20Grass.jpg" alt="Carousel_pic_1" width="100%" height="300">
+					<img src="Bristle Grass.jpg" alt="Carousel_pic_1" width="100%" height="300">
 					<div class="carousel-caption">
        					<h2></h2>
      				</div>
 				</div>
 				<div class="carousel-item">
-					<img src="file:///Library/Desktop%20Pictures/Yosemite%205.jpg" alt="Carousel_pic_2" width="100%" height="300">
+					<img src="Yosemite 05.jpg" alt="Carousel_pic_2" width="100%" height="300">
 					<div class="carousel-caption" id= "pic2">
        					<h2></h2>
      				</div>
 				</div>
 				<div class="carousel-item">
-					<img src="https://github.com/innovatrixlvis/images/blob/1a48bd18ddbe90c71cb5700ed2ebc18ff7c791e8/Blue%20Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
+					<img src="Blue Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
 					<div class="carousel-caption" id= "pic3">
        					<h2></h2>
      				</div>
