--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -41,19 +41,19 @@
   
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="file:///Library/Desktop%20Pictures/Bristle%20Grass.jpg" alt="Carousel_pic_1" width="100%" height="300">
+					<img src="picture_1.jpg" alt="Carousel_pic_1" width="100%" height="300">
 					<div class="carousel-caption">
        					<h2></h2>
      				</div>
 				</div>
 				<div class="carousel-item">
-					<img src="file:///Library/Desktop%20Pictures/Yosemite%205.jpg" alt="Carousel_pic_2" width="100%" height="300">
+					<img src="picture_2.jpg" alt="Carousel_pic_2" width="100%" height="300">
 					<div class="carousel-caption" id= "pic2">
        					<h2></h2>
      				</div>
 				</div>
 				<div class="carousel-item">
-					<img src="file:///Library/Desktop%20Pictures/Blue%20Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
+					<img src="picture_3.jpg" alt="Carousel_pic_3" width="100%" height="300">
 					<div class="carousel-caption" id= "pic3">
        					<h2></h2>
      				</div>
