--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -20,7 +20,7 @@
 	<!-- Navigation Bar -->
     
 	<!-- Hero Image -->
-	<section>
+	<section style="height: 100vh;position: relative;">
 		<div class="para">
 			<span class="header">Atheneum</span><br>
 			<span class="text">In modern-times, owing to hectic schedules it becomes very difficult to remain 
