--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -23,11 +23,13 @@
 	<section style="height: 100vh;position: relative;">
 		<div class="para">
 			<span class="header">Atheneum</span><br>
-			<span class="text">In modern-times, owing to hectic schedules it becomes very difficult to remain 
-			active all the time. Often , people fall asleep on the wheel which can lead to serious consequences, 
-			there can be accidents and many may even lose their lives. This situation is much more common than 
-			we know and hence, it is very important to counter this problem. So to address this issue, we have 
-			come up with a solution, Hexadrive.
+			<span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+				sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+				culpa qui officia deserunt mollit anim id est laborum.
 			</span>
 		</div>
 	</section>
