--- a/mainpage-2/index.html
+++ b/mainpage-2/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
 	<title>Atheneum</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -39,25 +35,25 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
-  <img src="Picture4.jpeg" style="width:100%">
+  <img src="picture4.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 4</div>
-  <img src="Picture2.jpeg" style="width:100%">
+  <img src="picture2.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 4</div>
-  <img src="Picture1.jpeg" style="width:100%">
+  <img src="picture1.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">4 / 4</div>
-  <img src="Picture3.jpeg" style="width:100%">
+  <div class="numbertext">4 / 4</div>s
+  <img src="picture3.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
