--- a/mainpage-2/index.html
+++ b/mainpage-2/index.html
@@ -35,25 +35,25 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
-  <img src="picture4.jpeg" style="width:100%">
+  <img src="./picture4.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 4</div>
-  <img src="picture2.jpeg" style="width:100%">
+  <img src="./picture2.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 4</div>
-  <img src="picture1.jpeg" style="width:100%">
+  <img src="./picture1.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">4 / 4</div>s
-  <img src="picture3.jpeg" style="width:100%">
+  <img src="./picture3.jpeg" style="width:100%">
   <div class="captiontext">Lorem Ipsum Dolor Set</div>
 </div>
 
